# AIMU

./: Cargo.toml  README.md  aimu.nix  build.rs  default.nix  flake.nix
.helix/: languages.toml
src/: aimu.rs  config.rs  device.rs  imu.rs  imu_bmi160.rs  imu_bmi260.rs  main.rs  motion.rs
src/config/: cli.rs
src/device/: trigger.rs  vmouse.rs
src/imu/: bmi160.rs  bmi260.rs
