[package]
name = "aimu"
version = "0.2.2"
author = "Adam Wahab"
about = "IMU motion control."
description = "Motion control for handheld computers equipped with a BMI160/BMI260 IMU."
license-file = "LICENSE"
repository = "https://gitlab.com/awahab/aimu"
edition = "2021"

[dependencies]
autocxx = "0.26.0"
bmi160 = { version = "0.1.2", optional = true }
bmi270 = { git = "https://gitlab.com/awahab/bmi270.git", branch = "bmi260", version = "0.1.0", optional = true }
cxx = "1.0.104"
linux-embedded-hal = "0.3.2"
evdev = { version = "0.12.1", features = ["tokio"] }
tokio = { version = "1.32.0", features = ["rt", "macros", "sync", "time"], optional = true }
async-trait = { version = "0.1.73", optional = true }
clap = { version = "4.4.6", features = ["derive"], optional = true }
thiserror = "1.0.49"
anyhow = "1.0.75"

[build-dependencies]
autocxx-build = "0.26.0"

[features]
default = ["dynamic"]
dynamic = ["cli", "bmi160", "bmi260"]
cli = ["dep:clap"]
bmi160 = ["dep:bmi160"]
bmi260 = ["dep:bmi270"]
async = ["dep:tokio", "dep:async-trait"]

[profile.release]
lto = true
strip = "symbols"

