[package]
name = "aimu"
version = "0.2.2"
author = "Adam Wahab"
about = "IMU motion control."
description = "Motion control for handheld computers equipped with a BMI160/BMI260 IMU."
license-file = "LICENSE"
repository = "https://gitlab.com/awahab/aimu"
edition = "2021"

[dependencies]
bmi160 = { version = "0.1.2", optional = true }
bmi270 = { git = "https://gitlab.com/awahab/bmi270.git", branch = "bmi260", version = "0.1.0", optional = true }
linux-embedded-hal = "0.3.2"
evdev = { version = "0.12.1" }
async-trait = { version = "0.1.73", optional = true }
clap = { version = "4.4.6", features = ["derive"], optional = true }
thiserror = "1.0.49"
anyhow = "1.0.75"
toml = "0.8.4"
serde = { version = "1.0.189", features = ["derive"] }
glam = { version = "0.24.2", features = ["serde"] }
gamepad_motion = "0.1.0"

[features]
default = ["dynamic"]
dynamic = ["cli", "bmi160", "bmi260"]
cli = ["dep:clap"]
bmi160 = ["dep:bmi160"]
bmi260 = ["dep:bmi270"]

[profile.release]
lto = true
strip = "symbols"

