[package]
name = "aimu"
version = "0.2.3"
authors = ["Adam Wahab"]
description = "Motion control for handheld computers equipped with a BMI160/BMI260 IMU."
keywords = ["imu", "gyro", "gamepad", "motion", "handheld"]
license-file = "LICENSE"
repository = "https://gitlab.com/awahab/aimu"
edition = "2021"

[dependencies]
bmi160 = { version = "1.1.0", optional = true }
bmi270 = { git = "https://gitlab.com/shymega/bmi270.git", branch = "bmi260", version = "0.1.0", optional = true }
linux-embedded-hal = "0.4.0"
evdev = { version = "0.12.2" }
async-trait = { version = "0.1.81", optional = true }
clap = { version = "4.5.13", features = ["derive"], optional = true }
thiserror = "1.0.63"
anyhow = "1.0.86"
toml = "0.8.19"
serde = { version = "1.0.204", features = ["derive"] }
glam = { version = "0.28.0", features = ["serde"] }
gamepad_motion = { git = "https://gitlab.com/shymega/gamepad_motion", branch = "remove-submodule" }

[features]
default = ["dynamic"]
dynamic = ["cli", "bmi160", "bmi260"]
cli = ["dep:clap"]
bmi160 = ["dep:bmi160"]
bmi260 = ["dep:bmi270"]

[profile.release]
lto = true
strip = "symbols"

